added minikube commands